<resources>
    <string name="app_name">WildOrchidWatch</string>
    <string name="email_address">Email Address</string>
    <string name="delete_observation">Delete observation</string>
    <string name="observation_deleted">Observation deleted</string>
    <string name="species_guess_hint">Species name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="sync_required">Sync required</string>
    <string name="sync_required_message">%1$d observations, %2$d photos to sync</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="couldnt_load_nearby_observations">Couldn\'t load nearby observations: %1$s</string>
    <string name="username_invalid">Username or password was invalid, please sign in again.</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_in">Signed in!</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="please_sign_in_description">Please sign in to your iNaturalist account or sign up for a new one.</string>
    <string name="please_enable_location_services">Please enable location services in order to find your current location...</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="photo_not_specified">Photo not specified</string>
    <string name="set_date">Date</string>
    <string name="set_time">Time</string>
    <string name="something_went_wrong">Blast, something went wrong: %1$s</string>
    <string name="edit">Edit</string>
    <string name="oh_no">Oh no! %1$s</string>
    <string name="observations">My Observations</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="projects">Projects</string>
    <string name="delete_photo">Delete photo</string>
    <string name="menu">Menu</string>
    <string name="layers">Layers</string>
    <string name="my_location">My Location</string>
    <string name="nearby_observations">Nearby Observations</string>
    <string name="add">Add</string>
    <string name="view_on_inat">View on iNaturalist.org</string>
    <string name="reload">Reload</string>
    <string name="view_in_browser">View in browser</string>
    <string name="add_observation">Add observation</string>
    <string name="take_picture">Take picture</string>
    <string name="save">Save</string>
    <string name="no_observations_yet">No observations yet!</string>
    <string name="or">or</string>
    <string name="signed_out">Sign out</string>
    <string name="view">View</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_species">Unknown species</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="discard_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree">Agree?</string>
    <string name="no_comments">No comments/identifications yet</string>
    <string name="you">you</string>
    <string name="add_comment">Add comment</string>
    <string name="add_id">Add identification</string>
    <string name="remarks">Remarks...</string>
    <string name="enter_taxon_name">Species name</string>
    <string name="no_projects">No projects found!</string>
    <string name="no_guides">No guides found!</string>
    <string name="loading_projects">Loading projects...</string>
    <string name="joined_projects">Joined</string>
    <string name="nearby_projects">Nearby</string>
    <string name="featured_projects">Featured</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="loading_check_list">Loading Check List...</string>
    <string name="no_check_list">No Taxa in Check List!</string>
    <string name="failed_to_add_obs_to_project">Failed to add observation \'%1$s\' to project \'%2$s\': %3$s</string>
    <string name="invalid_project_field">Please enter a valid value for field \'%1s\'</string>
    <string name="select_projects">Select from Joined Projects</string>
    <string name="not_connected">You must be connected to the Internet in order to do that!</string>
    <string name="search_projects">Search projects...</string>
    <string name="search_guides">Search guides...</string>
    <string name="save_observation">Save observation</string>
    <string name="about_guide">About</string>
    <string name="about_guide_all_caps">ABOUT</string>
    <string name="about_project">About</string>
    <string name="about_project_all_caps">ABOUT</string>
    <string name="about_this_app">About</string>
    <string name="about_taxon_short">About</string>
    <string name="geoprivacy">Geoprivacy</string>
    <string name="delete_confirmation">Are you sure you want to delete this observation?</string>
    <string name="guides">Guides</string>
    <string name="my_guides">Yours</string>
    <string name="nearby_guides">Nearby</string>
    <string name="all_guides">All</string>
    <string name="no_taxa">No taxa found for this guide!</string>
    <string name="search_taxa">Search taxa...</string>
    <string name="no_internet_guides">Guides require an Internet connection</string>
    <string name="no_internet_projects">Projects require an Internet connection</string>
    <string name="locale_gl">Galician</string>
    <string name="locale_eu">Basque</string>
    <string name="use_device_language_settings">Use device language settings</string>
    <string name="choose_location">Choose Location</string>
    <string name="done">Done</string>
    <string name="please_sign_in_via_settings">You must be logged in to view projects you\'ve joined.</string>
    <string name="contact_support">Contact Support</string>
    <string name="credits">Designed and built by iNaturalist.org with support from the California Academy of Sciences</string>
    <string name="leave_project">Leave Project</string>
    <string name="leave_project_confirmation">Are you sure you want to leave this project?</string>
    <string name="discard_location_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_locality_notes">Edit Locality Notes</string>
    <string name="get_current_location">Get current location</string>
    <string name="pull_to_refresh">Pull to refresh...</string>
    <string name="release_to_refresh">Release to refresh...</string>
    <string name="refreshing">Refreshing...</string>
    <string name="sync_x_observations">Sync %1$d observations</string>
    <string name="sync_1_observation">Sync 1 observation</string>
    <string name="sync_observations">Sync Observations</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="view_nearby_observations">View Nearby Observations</string>
    <string name="skip_for_now">Skip for Now</string>
    <string-array name="tutorial_titles">
        <item></item>
        <item>Observe</item>
        <item>Share</item>
        <item>Learn</item>
        <item>Contribute</item>
    </string-array>
    <string-array name="tutorial_descriptions">
        <item>Explore and Connect with Nature</item>
        <item>Get outside! Find something wild, and take a clear, full frame photo.</item>
        <item>Share your observation with the iNaturalist community.</item>
        <item>Check back for comments and identifications on your observation!</item>
        <item><![CDATA[<b>Research Grade</b> observations are shared with scientists working to better understand and protect nature.]]></item>
    </string-array>
    <string-array name="geoprivacy_items">
        <item>Open</item>
        <item>Obscured</item>
        <item>Private</item>
    </string-array>
    <string name="alert_sign_out">Are you sure you want to sign out? This will delete all your observations on this device. It will not affect any observations you\'ve uploaded to iNaturalist.</string>
    <string name="alert_unsupported_media_type">Sorry, but there was a problem loading the photo from this source</string>
    <string name="explore">Explore</string>
    <string name="restricted_to_current_map_area">Restricted to current map area</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="observation_photos">Observation Photos</string>
    <string name="remove">Remove?</string>
    <string name="no_observations_found">No observations found</string>
    <string name="license_none">None, all rights reserved</string>
    <string name="sources_and_attribution">Sources and Attribution</string>
    <string name="photos"><![CDATA[<b>Photos:</b> %1$s]]></string>
    <string name="text"><![CDATA[<b>Text:</b> %1$s]]></string>
    <string name="alert_message_use_inaturalist">The main iNaturalist Network. Clicking OK will set your app as part of the global iNaturalist network.</string>
    <string name="login_with">Log In with</string>
    <string name="facebook">Facebook</string>
    <string name="gplus">Google+</string>
    <string name="email">Email</string>
    <string name="skip">Skip  ›</string>
    <string name="new_to_inat_sign_up_now"><![CDATA[New to %1$s? <b>Sign up now!</b>]]></string>
</resources>