<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">

    <ViewFlipper
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:autoStart="false"
        android:flipInterval="6000"
        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/signup_background_1" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/signup_background_2" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/signup_background_3" />

    </ViewFlipper>


    <ImageView
        android:id="@+id/close"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/close_button_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="25dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Wild Orchid Watch"
        android:textAppearance="@style/iNatTitleTextStyle"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#11FFFFFF"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/sign_up_with_email"
        >
        <TextView
            android:id="@+id/sign_up_with_email_text"
            android:duplicateParentState="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/semi_transparent_button_text2"
            android:text="@string/new_to_inat_sign_up_now"
            />

    </LinearLayout>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="34dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/oval_button"
        android:text="@string/skip"
        android:textColor="@drawable/semi_transparent_button_text"
        android:textSize="14sp"
        android:layout_above="@+id/sign_up_with_email"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:layout_above="@id/skip"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:id="@+id/login_with_facebook"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#11FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:duplicateParentState="true"
                    android:src="@drawable/facebook_button_icon" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#33FFFFFF"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:duplicateParentState="true"
                android:text="@string/login_with"
                android:textColor="@drawable/semi_transparent_button_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:duplicateParentState="true"
                android:text="@string/facebook"
                android:textColor="@drawable/semi_transparent_button_text"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#11FFFFFF"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/login_with_gplus"
            >
            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:duplicateParentState="true"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gplus_button_icon"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <View
                android:duplicateParentState="true"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#33FFFFFF" />

            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@drawable/semi_transparent_button_text"
                android:text="@string/login_with"
                />

            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="@drawable/semi_transparent_button_text"
                android:text="@string/gplus"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#11FFFFFF"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/login_with_email"
            >
            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:duplicateParentState="true"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/email_button_icon"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <View
                android:duplicateParentState="true"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#33FFFFFF" />

            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@drawable/semi_transparent_button_text"
                android:text="@string/login_with"
                />

            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="@drawable/semi_transparent_button_text"
                android:text="@string/email"
                android:textStyle="bold"
                />
        </LinearLayout>

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</RelativeLayout>